<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fitStatusBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#448AFF"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/work_linear"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#448AFF"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_worktitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="工作25分钟"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tomatosnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="ssssss"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/clock_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.timedebris.View.ClockTextView
            android:id="@+id/tv_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:"
            android:textSize="40sp" />

        <com.timedebris.View.ClockTextView
            android:id="@+id/tv_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:"
            android:textSize="40sp" />

        <com.timedebris.View.ClockTextView
            android:id="@+id/tv_mills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textSize="40sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_startTime"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_changed_timer"
        android:text="@string/timer_start"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_stopTime"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_changed_timer"
        android:text="@string/timer_stop"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_finishTime"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_click_timer"
        android:text="@string/timer_done"
        android:textColor="#ffffff"
        android:textSize="24sp" />

</LinearLayout>